--- a/style/common.css
+++ b/style/common.css
@@ -41,7 +41,7 @@ a{
     border:solid 1px black;
     margin-left:30px;
 }
-.bar{
+#bar{
     display:flex;
     width: 100%;
     height:50px;
@@ -50,15 +50,16 @@ a{
     justify-content: center;
 }
 
-.bar li{
-    padding:10px 2em;
+#bar li{
+    padding:0px 2em;
+    float: left;
 }
 
-.bar a{
+#bar a{
     color:white;
 }
 
-.bar a:hover{
+#bar a:hover{
     border-bottom: solid 1px white;
 }
 
@@ -81,3 +82,44 @@ a{
 #copyright{
     text-align: center;
 }
+
+.middle{text-align: center;}
+#contact{margin-left: 40%;}
+
+.btn-gnavi{
+    display:none;
+}
+
+#page_top{
+    width: 80px;
+    height: 80px;
+    position: fixed;
+    right: 40px;
+    bottom: 40px;
+    background: #D59649;
+    opacity: 0.8;
+    border-radius: 50%;
+  }
+  #page_top a{
+    position: relative;
+    display: block;
+    width: 80px;
+    height: 80px;
+    text-decoration: none;
+  }
+  #page_top a::before{
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    content: '\f0d8';
+    font-size: 40px;
+    color: #fff;
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    top: -5px;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    text-align: center;
+  }
