--- a/style/indexMid.css
+++ b/style/indexMid.css
@@ -9,8 +9,9 @@
 }
 
 #department{
+    display: inline-block;
+    width: 260px;
     padding:0 20px;
-    margin-left:6%;
     background-color: #A7212F;
     border-radius: 14px;
     height:400px;
@@ -41,8 +42,10 @@
 #department .autor{
     color:white;
 }
+
 #notice-inner{
-    width: 740px;
+    margin:0 3vw;
+    width:60vw;
     height:400px;
     border:solid 3px black;
     overflow:auto;
@@ -74,52 +77,27 @@
     text-align: center;
 }
 
-
-
-.links-inner{
-    padding-bottom:50px;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-align-items: center;
-    align-items: center;
+#movie video{
+    width:80vw;
 }
-#links-title{
-    margin-top:40px;
+
+#movie{
+    color:white;
     text-align: center;
+    margin: 2em 0;
+    padding:20px 0;
+    background: #253965;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
 }
-.links-inner p{
-    display: -webkit-flex;
-    display: flex;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-align-items: center;
-    align-items: center;
-    margin:0 20px;
-    width:258px;
-    height:84px;
-    border:solid 1px gray;
-}
-.links-inner a{
-    color:black;
-}
-.links-inner a:hover{
-    text-decoration: underline;
+#movie span{
+    border-bottom: solid 2px #D59649;
 }
 
-.links-inner i{
-    color:#1877F2;
-    margin-right: 10px;
-}
 
-/* 以下スライダー用 */
 .slider {
-    margin:auto;
     position: relative;
-    width: 1200px;
-    height: 600px;
-    margin-top:20px;
+    width: 100%;
+    margin-bottom: 55vw;
 }
 
 .slider .slider-inner {
@@ -142,9 +120,6 @@
     transition: all 600ms;
     pointer-events: none
 }
-.slider .slider-inner img{
-    border-radius: 4px;
-}
 .slider .slider-inner li.show {
     opacity: 1;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
@@ -154,32 +129,8 @@
 }
 
 .slider .nav {
-    padding-left:0;
-    margin-top: 10px;
-    text-align: center;
-    font-size: 0
+    display:none;
 }
-
-.slider .nav li {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    margin: 0 5px;
-    border-radius: 15px;
-    background: #ddd;
-    cursor: pointer;
-    -webkit-transition: background 400ms;
-    transition: background 400ms
-}
-
-.slider .nav li:hover {
-    background: #A7212F
-}
-
-.slider .nav li.current {
-    background: #A7212F
-}
-
 
 .slider .arrow {
     position: absolute;
@@ -188,6 +139,9 @@
     cursor: pointer;
     width: 25px;
     height: 75px;
+    margin:0 35px;
+    margin-top: 25vw;
+    z-index:1;
     background: #253965;
     color: #fff;
     line-height: 75px;
@@ -213,19 +167,39 @@
     transform: translate(100%,-50%)
 }
 
-/* 動画 */
-#movie{
-    color:white;
-    text-align: center;
-    margin: 2em 0;
-    padding:20px 0;
-    background: #253965;
-    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+.links-inner{
+    padding-bottom:50px;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-align-items: center;
+    align-items: center;
 }
-#movie span{
-    border-bottom: solid 2px #D59649;
+#links-title{
+    margin-top:40px;
+    text-align: center;
+}
+.links-inner p{
+    text-align: center;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-align-items: center;
+    align-items: center;
+    margin:0 20px;
+    width:258px;
+    height:84px;
+    border:solid 1px gray;
+}
+.links-inner a{
+    color:black;
+}
+.links-inner a:hover{
+    text-decoration: underline;
 }
 
-#movie video{
-    width:1000px;
+.links-inner i{
+    display: none;
 }
