--- a/style/commonMid.css
+++ b/style/commonMid.css
@@ -19,6 +19,9 @@ a{
     justify-content: center;
     -webkit-align-items: center;
     align-items: center;
+    padding-bottom: 10px;
+    border-bottom: solid 20px #A7212F;
+    margin-bottom:20px;
 }
 
 .header img:hover{
@@ -38,17 +41,7 @@ a{
     display: none;
 }
 
-#bar .search{
-    margin-left:30px;
-}
-#bar{
-    display:flex;
-    width: 100%;
-    height:50px;
-    margin:0;
-    background-color: #A7212F;
-    justify-content: center;
-}
+
 
 #bar li{
     padding:10px 2em;
@@ -67,11 +60,19 @@ a{
 }
 
 .footer{
-    padding:50px 0;
+    padding:20px 0;
     background-color:#A7212F;
     color:white;
+}
+
+.footer img{
+    margin-left: 40%;
+}
+
+.footer a{
     text-align: center;
 }
+
 #site:hover{
     color:#2997FF;
 }
@@ -84,6 +85,14 @@ a{
 #contact{margin-left: 40%;}
 
 
+#logo{
+    height:70px;
+}
+
+.footer img{
+    height:70px;
+}
+
 /* 以下、ハンバーガーメニュー用 */
 #wrapper nav {
     position: fixed;
@@ -91,15 +100,15 @@ a{
     right: -300px;
     width: 300px;
     height: 100%;
-    padding-top: 50px;
-    background: rgba(33,33,33,.9);
+    padding-top: 100px;
+    background: #253965;
     font-size: 16px;
     box-sizing: border-box;
     z-index: 2
 }
 
 #wrapper nav li {
-    padding: 20px 28px;
+    margin:10px auto;
 }
 
 #wrapper .btn-gnavi {
@@ -156,4 +165,26 @@ a{
     width: 24px;
     -webkit-transform: translate(-7px,-17px) rotate(-45deg);
     transform: translate(-7px,-17px) rotate(-45deg)
+}
+#bar .lang{
+    padding:5px;
+    border:solid 1px white;
+}
+
+#bar .lang:hover{
+    transition: 0.7s;
+    background-color: white;
+    color:#253965
+}
+
+#bar a:hover{
+    border-bottom: solid 1px white;
+}
+
+#bar .access:hover{
+    border-bottom: solid 1px white;
+}
+
+#bar h3{
+    margin:0;
 }
