--- a/style/common.css
+++ b/style/common.css
@@ -2,7 +2,7 @@ body{
     margin:0;
     padding: 0;
     font-style:normal;
-    font-family: 'Noto Sans JP', sans-serif;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 li{
     list-style: none;
@@ -54,7 +54,6 @@ a{
 
 
 .header .search{
-    border:solid 1px black;
     margin-left:30px;
 }
 
@@ -115,7 +114,10 @@ a{
 }
 
 .middle{text-align: center;}
-#contact{margin-left: 40%;}
+#contact{
+    width: 250px;
+    margin:auto;
+}
 
 .btn-gnavi{
     display:none;
@@ -127,4 +129,34 @@ a{
 
 .footer img{
     height:70px;
+}
+
+#list{
+    width: 350px;
+    margin:auto;
+}
+
+#list li{
+    color:black;
+    list-style:initial;
+}
+
+#list li:hover{
+    color:#2997FF
+}
+
+.main{
+    width:800px;
+    margin:auto;
+}
+
+.main h2{
+    text-align: center;
+    border-bottom:solid 2px black;
+    margin-bottom: 40px;
+}
+
+.main p{
+    line-break: auto;
+    font-size: 1.1em;
 }
