--- a/style/index.css
+++ b/style/index.css
@@ -51,6 +51,7 @@
     width: 740px;
     height:400px;
     border:solid 3px black;
+    background-color: #fcf7f7;
     overflow:auto;
 }
 
@@ -60,6 +61,7 @@
     color:#A7212F;
 }
 #notice-inner dd{
+    margin-right: 40px;
     font-size:1.25em;
     word-wrap: break-word;
 }
@@ -74,6 +76,7 @@
 }
 
 #notice-inner dl{
+    margin-right: 40px;
     border-bottom: solid 0.5px black;
 }
 #notice-title{
