--- a/style/indexMid.css
+++ b/style/indexMid.css
@@ -51,16 +51,18 @@
     width: 400px;
     height:400px;
     border:solid 3px black;
+    background-color: #fcf7f7;
     overflow:auto;
 }
 
 #notice-inner dt{
     margin-left:5px;
-    font-size: 1.5em;
+    font-size: 1.2em;
     color:#A7212F;
 }
 #notice-inner dd{
-    font-size:1.25em;
+    margin-right: 40px;
+    font-size:1em;
     word-wrap: break-word;
 }
 
@@ -74,6 +76,7 @@
 }
 
 #notice-inner dl{
+    margin-right: 40px;
     border-bottom: solid 0.5px black;
 }
 #notice-title{
