--- a/style/indexMin.css
+++ b/style/indexMin.css
@@ -109,15 +109,17 @@
     height:400px;
     border:solid 3px black;
     overflow:auto;
+    background-color: #fcf7f7;
 }
 
 #notice-inner dt{
     margin-left:5px;
-    font-size: 1.5em;
+    font-size: 1.2em;
     color:#A7212F;
 }
 #notice-inner dd{
-    font-size:1.25em;
+    margin-right: 40px;
+    font-size:1em;
     word-wrap: break-word;
 }
 
@@ -131,6 +133,7 @@
 }
 
 #notice-inner dl{
+    margin-right: 40px;
     border-bottom: solid 0.5px black;
 }
 #notice-title{
