--- a/style/commonMin.css
+++ b/style/commonMin.css
@@ -206,6 +206,7 @@ a{
 /* The MIT License (MIT) */
 /* * Copyright 2011-2019 The Bootstrap Authors */
 /* * Copyright 2011-2019 Twitter, Inc. */
+/* * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE) */
 h4{
     margin-top:0;
     margin-bottom:.5rem;
