--- a/style/common.css
+++ b/style/common.css
@@ -148,6 +148,7 @@ a{
 .main{
     width:800px;
     margin:auto;
+    margin-bottom: 50px;
 }
 
 .main h2{
@@ -162,8 +163,12 @@ a{
 }
 
 #share{
+    display: -webkit-flex;
     display: flex;
-    
+    -webkit-justify-content: flex-end;
+    justify-content: flex-end;
+    -webkit-align-items: flex-end;
+    align-items: flex-end;
 }
 
 #share .twitter-share-button{
