--- a/style/common.css
+++ b/style/common.css
@@ -131,17 +131,17 @@ a{
     height:70px;
 }
 
-#list{
+.list{
     width: 350px;
     margin:auto;
 }
 
-#list li{
+.list li{
     color:black;
     list-style:initial;
 }
 
-#list li:hover{
+.list li:hover{
     color:#2997FF
 }
 
