--- a/style/indexMid.css
+++ b/style/indexMid.css
@@ -1,5 +1,5 @@
 .pair{
-    margin-top:60px;
+    margin-top:30px;
     display: -webkit-flex;
     display: flex;
     -webkit-justify-content: center;
@@ -107,21 +107,24 @@
     margin:auto;
     position: relative;
     width: 800px;
-    margin-bottom: 450px;
+    height: 320px;
+    margin-top:20px;
 }
 
 .slider .slider-inner {
     position: relative;
     top: 0;
     left: 0;
-    width: 800px;
+    width: 100%;
+    height: 100%;
     padding-left:0;
 }
 .slider .slider-inner li {
     position: absolute;
     top: 0;
     left: 0;
-    width: 800px;
+    width: 100%;
+    height: 100%;
     opacity: 0;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     -webkit-transition: all 600ms;
@@ -147,8 +150,6 @@
     cursor: pointer;
     width: 20px;
     height: 20px;
-    margin-top: 200px;
-    z-index:1;
     background: #253965;
     color: #fff;
     line-height: 20px;
