fix stylesheet to display well on local server

--- a/style/index.css
+++ b/style/index.css
@@ -197,8 +197,6 @@
     top: 50%;
     font-size: 25px;
     cursor: pointer;
-    width: 25px;
-    height: 75px;
     background: #253965;
     color: #fff;
     line-height: 75px;
@@ -251,22 +249,17 @@
     bottom: 40px;
     border:solid 2px #D59649;
     border-radius: 50%;
+    background-color: rgba(213,150,73,0.8);
   }
   
-  #page_top a{
-    position: relative;
-    display: block;
-    width: 80px;
-    height: 80px;
-    text-decoration: none;
-  }
+
 
   #page_top a::before{
     font-family: 'Font Awesome 5 Free';
     font-weight: 900;
     content: '\f0d8';
     font-size: 40px;
-    color:#D59649;
+    color:white;
     position: absolute;
     width: 40px;
     height: 40px;
