--- a/style/common.css
+++ b/style/common.css
@@ -19,7 +19,8 @@ a{
 
 #bar li{
     padding:10px 2em;
-    float: left;
+    font-size: 18px;
+    float: right;
 }
 
 #bar a{
@@ -179,6 +180,10 @@ a{
     left:0;
     width:100%;
     z-index: 2;
+    transition: 0.5s;
+}
+#header:hover{
+    background-color: white;
 }
 /*見出し設定*/
 #header h1,#header i{
