set background-color on header

--- a/style/index.css
+++ b/style/index.css
@@ -223,6 +223,7 @@
 
 #header{
     transition: all  0.3s ease;
+    background-color: rgba(0, 0, 0, 0);
 }
 #header:hover{
     background-color: rgba(0, 0, 0, 0.75);
