--- a/style/common.css
+++ b/style/common.css
@@ -174,15 +174,13 @@ a{
 
 /* 以下、ヘッダー */
 #header{
-    padding:50px 100%;
+    padding:40px 100%;
     position: fixed;
     top:0;
     left:0;
     width:100%;
     z-index: 2;
     transition: 0.5s;
-}
-#header:hover{
     background-color: white;
 }
 /*見出し設定*/
@@ -204,6 +202,7 @@ a{
 #header i{top: 40px;}
 
 #header #title{
+    top: 16px;
     left:180px;
 }
 
