--- a/style/indexMin.css
+++ b/style/indexMin.css
@@ -1,39 +1,27 @@
 @charset "utf-8";
 
-
 #video-area {
-    z-index: -1;
-    position: relative;/*h1の中央寄せ配置の起点とするためのrelative*/
-    height:50vh
-}
-
-#video-origin{
-    position: fixed;
-    z-index: -1;/*最背面に設定*/
-    top: 0;
-    right:0;
-    left:0;
-    bottom:0;
+    position: relative;
+    width: 100%;
+    height: 50vh;
     overflow: hidden;
 }
+
 #video {
-    /*天地中央配置*/
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    /*縦横幅指定*/
-    width: 177.77777778vh; /* 16:9 の幅→16 ÷ 9＝ 177.77% */
-    height: 56.25vw; /* 16:9の幅 → 9 ÷ 16 = 56.25% */
-    min-height: 100%;
-    min-width: 100%;
+    transform: translateX(-50%) translateY(-50%);
+    height: 50vh;
 }
 #video-area h1{
-    padding-left: 20px;
-    font-size:44px;
+    z-index: 1;
+    padding-left: 10px;
+    font-size:40px;
+    font-weight: 400;
     top:35vh;
-    left:40vw;
-    width: 300px;
+    left:40%;
+    width: 60vw;
     /*要素の配置*/
     position:absolute;
     /*要素を天地中央寄せ*/
@@ -48,7 +36,6 @@
 
 #container{
   background:#fff;
-  padding:100px 0 0px 0;
 }
 
 #header h1,#header i{
@@ -57,6 +44,14 @@
 
 #wrapper .btn-gnavi span{
     background-color: #fff;
+}
+
+#header{
+    transition: all  0.3s ease;
+    background-color: rgba(0, 0, 0, 0);
+}
+#header:hover{
+    background-color: rgba(0, 0, 0, 0.75);
 }
 
 .slider {
@@ -277,6 +272,7 @@
 
 
 #page_top{
+        z-index: 2;
     width: 80px;
     height: 80px;
     position: fixed;
