--- a/style/commonMin.css
+++ b/style/commonMin.css
@@ -12,6 +12,8 @@ a{
     color:#2997FF;
 }
 
+.middle{text-align: center;}
+
 
 #bar .search{
     margin-right: 40px;
@@ -28,6 +30,7 @@ a{
 }
 #bar .lang{
     padding:5px;
+    font-weight: 400;
     border:solid 1px white;
 }
 
@@ -69,8 +72,6 @@ a{
 .footer img{
     height:70px;
 }
-
-.middle{text-align: center;}
 
 .list{
     width: 350px;
@@ -204,10 +205,12 @@ a{
 #header i{top: 40px;}
 
 #header #title{
+    font-weight: 400;
     left:150px;
 }
 
 #header #lang{
+    font-weight: 400;
     display: none;
 }
 
