--- a/style/index.css
+++ b/style/index.css
@@ -129,6 +129,7 @@
 
 
 #page_top{
+    z-index: 2;
     width: 80px;
     height: 80px;
     position: fixed;
@@ -164,14 +165,11 @@
   }
 
 #video-area{
-    z-index: -1;
     position: relative;/*h1の中央寄せ配置の起点とするためのrelative*/
     height: 100vh;/*高さを全画面にあわせる*/
 }
 
 #video-origin{
-    position: fixed;
-    z-index: -1;/*最背面に設定*/
     top: 0;
     right:0;
     left:0;
@@ -193,8 +191,10 @@
 }
 
 #video-area h1{
+    z-index: 1;
     padding-left: 40px;
     font-size:80px;
+    font-weight: 400;
     top: 60vh;
     left:70vw;
     width: 550px;
@@ -354,4 +354,7 @@
     width:1066px;
     height: 599.625px;
     border-radius: 10px;
+}
+#container{
+    margin-top:0px;
 }
