--- a/style/common.css
+++ b/style/common.css
@@ -1,235 +1,307 @@
-body{
-    margin:0;
-    padding: 0;
-    font-style:normal;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+body {
+  margin: 0;
+  padding: 0;
+  font-style: normal;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
-li{
-    list-style: none;
+li {
+  list-style: none;
 }
-a{
-    text-decoration: none;
-    color:#2997FF;
-}
-
-.middle{text-align: center;}
-
-#bar .search{
-    margin-right: 40px;
+a {
+  text-decoration: none;
+  color: #2997ff;
 }
 
-#bar li{
-    padding:10px 2em;
-    font-size: 18px;
-    float: right;
+.middle {
+  text-align: center;
 }
 
-#bar a{
-    color:white;
-}
-#bar .lang{
-    padding:5px;
-    font-weight: 400;
-    border:solid 1px white;
+#bar .search {
+  margin-right: 40px;
 }
 
-#bar .lang:hover{
-    transition: 0.7s;
-    background-color: white;
-    color:#253965
+#bar li {
+  padding: 10px 2em;
+  font-size: 18px;
+  float: right;
 }
 
-#bar a:hover{
-    border-bottom: solid 1px white;
+#bar a {
+  color: white;
+}
+#bar .lang {
+  padding: 5px;
+  font-weight: 400;
+  border: solid 1px white;
 }
 
-#bar .access:hover{
-    border-bottom: solid 1px white;
+#bar .lang:hover {
+  transition: 0.7s;
+  background-color: white;
+  color: #253965;
 }
 
-#bar h3{
-    margin:0;
+#bar a:hover {
+  border-bottom: solid 1px white;
 }
 
-
-#site{
-    color:white;
-    text-align: center;
-    text-decoration: underline;
+#bar .access:hover {
+  border-bottom: solid 1px white;
 }
 
-#site:hover{
-    color:#2997FF;
+#bar h3 {
+  margin: 0;
 }
 
-.footer{
-    padding:20px 0;
-    background-color:#A7212F;
-    color:white;
-    text-align: center;
+#site {
+  color: white;
+  text-align: center;
+  text-decoration: underline;
 }
 
-.footer img{
-    height:70px;
+#site:hover {
+  color: #2997ff;
 }
 
-.list{
-    width: 350px;
-    margin:auto;
+.footer {
+  padding: 20px 0;
+  background-color: #a7212f;
+  color: white;
+  text-align: center;
 }
 
-.list li{
-    color:black;
-    list-style:initial;
+.footer img {
+  height: 70px;
 }
 
-.list li:hover{
-    color:#2997FF
+.list {
+  width: 350px;
+  margin: auto;
 }
 
-#share{
-    display: -webkit-flex;
-    display: flex;
-    -webkit-justify-content: flex-end;
-    justify-content: flex-end;
+.list li {
+  color: black;
+  list-style: initial;
 }
 
-#share .twitter-share-button{
-    margin-right: 4px;
+.list li:hover {
+  color: #2997ff;
+}
+
+#share {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+
+#share .twitter-share-button {
+  margin-right: 4px;
 }
 
 /* 以下、ハンバーガーメニュー用 */
 #wrapper nav {
-    position: fixed;
-    top: 0;
-    right: -300px;
-    width: 300px;
-    height: 100%;
-    padding-top: 100px;
-    background: #253965;
-    font-size: 16px;
-    box-sizing: border-box;
-    z-index: 2
+  position: fixed;
+  top: 0;
+  right: -300px;
+  width: 300px;
+  height: 100%;
+  padding-top: 100px;
+  background: #253965;
+  font-size: 16px;
+  box-sizing: border-box;
+  z-index: 2;
 }
 
 #wrapper nav li {
-    margin:10px auto;
+  margin: 10px auto;
 }
 
 #wrapper .btn-gnavi {
-    position: fixed;
-    top:1vh;
-    right: 20px;
-    width: 30px;
-    height: 24px;
-    z-index: 3;
-    box-sizing: border-box;
-    cursor: pointer;
-    -webkit-transition: all 400ms;
-    transition: all 400ms
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  width: 30px;
+  height: 24px;
+  z-index: 3;
+  box-sizing: border-box;
+  cursor: pointer;
+  -webkit-transition: all 400ms;
+  transition: all 400ms;
+}
+
+@media screen and (min-width: 1270px) {
+  #wrapper .btn-gnavi {
+    top: 1vh;
+  }
 }
 
 #wrapper .btn-gnavi span {
-    position: absolute;
-    width: 30px;
-    height: 4px;
-    background: #000;
-    border-radius: 10px;
-    -webkit-transition: all 400ms;
-    transition: all 400ms
+  position: absolute;
+  width: 30px;
+  height: 4px;
+  background: #000;
+  border-radius: 10px;
+  -webkit-transition: all 400ms;
+  transition: all 400ms;
 }
 
 #wrapper .btn-gnavi span:nth-child(1) {
-    top: 0
+  top: 0;
 }
 
 #wrapper .btn-gnavi span:nth-child(2) {
-    top: 10px
+  top: 10px;
 }
 
 #wrapper .btn-gnavi span:nth-child(3) {
-    top: 20px
+  top: 20px;
 }
 
 #wrapper .btn-gnavi.open {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg)
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 #wrapper .btn-gnavi.open span {
-    background: #fff
+  background: #fff;
 }
 
 #wrapper .btn-gnavi.open span:nth-child(1) {
-    width: 24px;
-    -webkit-transform: translate(-7px,17px) rotate(45deg);
-    transform: translate(-7px,17px) rotate(45deg)
+  width: 24px;
+  -webkit-transform: translate(-7px, 17px) rotate(45deg);
+  transform: translate(-7px, 17px) rotate(45deg);
 }
 
 #wrapper .btn-gnavi.open span:nth-child(3) {
-    width: 24px;
-    -webkit-transform: translate(-7px,-17px) rotate(-45deg);
-    transform: translate(-7px,-17px) rotate(-45deg)
+  width: 24px;
+  -webkit-transform: translate(-7px, -17px) rotate(-45deg);
+  transform: translate(-7px, -17px) rotate(-45deg);
 }
 
 /* 以下、ヘッダー */
-#header{
-    padding:40px 100%;
-    position: fixed;
-    top:0;
-    left:0;
-    width:100%;
-    z-index: 2;
-    background-color: white;
+#header {
+  padding: 50px 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  background-color: white;
 }
+
+@media screen and (min-width: 1270px) {
+    #header{
+        padding: 40px 100%;
+    }
+}
+
 /*見出し設定*/
-#header h1,#header i{
-    /*要素の配置*/
-    position:absolute;
+#header h1,
+#header i {
+  /*要素の配置*/
+  position: absolute;
+  /*要素を天地中央寄せ*/
+  transform: translateY(-50%) translateX(-50%);
+  /*見た目の調整*/
+  color: #000;
+  -ms-user-select: none; /* IE 10+ */
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#header h1 {
     top: 25px;
-    /*要素を天地中央寄せ*/
-    transform: translateY(-50%) translateX(-50%);
-    /*見た目の調整*/
-    color:#000;
-    -ms-user-select: none; /* IE 10+ */
-    -moz-user-select: -moz-none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    user-select: none;
 }
 
-#header i{top: 38px;}
-
-#header #title{
-    top: 16px;
-    left:180px;
-    font-weight: 400;
+@media screen and (min-width:0px) and (max-width:870px){
+    #header i {
+        top: 40px;
+      }
+}
+@media screen and (min-width:870px) and (max-width:1270px){
+    #header i {
+        top: 48px;
+      }
+}
+@media screen and (min-width: 1270px) {
+    #header i {
+        top: 38px;
+      }   
 }
 
-#header #lang{
-    position: fixed;
-    right: 100px;
-    top:24px;
-    font-size: 21px;
-    font-weight: 400;
-    width: auto;
-
+#header #title {
+  left: 180px;
+  font-weight: 400;
 }
 
-#header .fa-map-marker-alt{
-    position: fixed;
-    right: 100px;
-    font-size: 21px;
-    width: auto;
+@media screen and (min-width: 1270px) {
+    #header #title {
+        top: 16px;
+    }
+}
+@media screen and (min-width: 0px) and (max-width:870px){
+    #header #title {
+        left: 150px;
+    }
 }
 
-#header .fa-search{
-    position: fixed;
-    right: 60px;
-    font-size: 21px;
-    width: auto;
+
+#header #lang {
+  position: fixed;
+  right: 100px;
+  font-size: 21px;
+  font-weight: 400;
+  width: auto;
 }
 
-#container{
-    margin-top:100px;
+@media screen and (max-width:870px) {
+    #header #lang {
+        display: none;
+    }
+}
+
+@media screen and (min-width:870px) and (max-width:1270px) {
+    #header #lang {
+        top: 32px;
+    }
+}
+@media screen and (min-width: 1270px) {
+    #header #lang {
+        top: 24px;
+    }
+}
+
+#header .fa-map-marker-alt {
+  position: fixed;
+  right: 100px;
+  font-size: 21px;
+  width: auto;
+}
+
+@media screen and (max-width:870px) {
+    #header .fa-map-marker-alt {
+        display: none;
+    }
+}
+
+#header .fa-search {
+  position: fixed;
+  right: 60px;
+  font-size: 21px;
+  width: auto;
+}
+
+@media screen and (max-width:870px) {
+    #header .fa-search {
+        display: none;
+    }
+}
+
+#container {
+  margin-top: 100px;
 }
